Refactor landing page
 - Update Image
 - Remove About
 - Remove Google Font

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -47,7 +47,7 @@ abbr,acronym {
 body {
     background:#f9f9f9 url(../images/bg_texture.png) repeat top left;
     color: #333;
-    font-family: 'Lato', sans-serif;
+    font-family: sans-serif;
     font-weight: 400;
     font-size: 15px;
 }
@@ -66,7 +66,6 @@ a[href^="https://"]:after {
     margin:1em auto 0 auto;
 }
 .main {
-    margin: 1em 1em ;
 }
 .clr {
     clear: both;
@@ -127,6 +126,7 @@ h3 {
     border: 10px solid #fff;
     background: #fff;
     display: block;
+    max-width: 100%;
     margin:0 auto;
 }
 .view a.info {
