--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ abbr,acronym {
 body {
     background:#f9f9f9 url(../images/bg_texture.png) repeat top left;
     color: #333;
-    font-family: 'Lato', sans-serif;
+    font-family: sans-serif;
     font-weight: 400;
     font-size: 15px;
 }
@@ -67,22 +67,12 @@ a[href^="https://"]:after {
 .main {
     position:absolute;
     margin: 10px auto;
-    left:42%;
+    left:32%;
     top: 100px;
-    width:500px;
+    width:700px;
 }
 .contact {
-  width: 300px;
-  height: 200px;
-  margin: 10px;
-  border: 10px solid #fff;
-  overflow: hidden;
-  position: relative;
-  text-align: center;
- -webkit-box-shadow: 1px 1px 2px #e6e6e6;
- -moz-box-shadow: 1px 1px 2px #e6e6e6;
-  box-shadow: 1px 1px 2px #e6e6e6;
-  background: #fff;
+    background:#fff;
 }
 .clr {
     clear: both;
@@ -134,8 +124,8 @@ h2 {
 /*Fancy Stuff*/
 
 .view {
-    width: 300px;
-    height: 200px;
+    width: 700px;
+    height: 500px;
     margin: 10px;
     border: 10px solid #fff;
     overflow: hidden;
@@ -148,8 +138,8 @@ h2 {
     background: #fff;
 }
 .view .mask,.view .content {
-    width: 300px;
-    height: 200px;
+    width: 700px;
+    height: 500px;
     position: absolute;
     overflow: hidden;
     top: 0;
@@ -170,7 +160,7 @@ h2 {
     margin: 20px 0 0 0;
 }
 .view p {
-    font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
+    font-family: 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
     font-style: italic;
     font-size: 14px;
     position: relative;
@@ -203,11 +193,11 @@ h2 {
 }
 .view-fancy .mask {
     background-color: rgba(96,96,96,0.3);
-    -webkit-transform: translateX(-300px);
-    -moz-transform: translateX(-300px);
-    -o-transform: translateX(-300px);
-    -ms-transform: translateX(-300px);
-    transform: translateX(-300px);
+    -webkit-transform: translateX(-700px);
+    -moz-transform: translateX(-700px);
+    -o-transform: translateX(-700px);
+    -ms-transform: translateX(-700px);
+    transform: translateX(-700px);
     -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=100)";
     filter: alpha(opacity=100);
     opacity: 1;
@@ -243,11 +233,11 @@ h2 {
     transform: translateX(0px);
 }
 .view-fancy:hover img {
-    -webkit-transform: translateX(300px);
-    -moz-transform: translateX(300px);
-    -o-transform: translateX(300px);
-    -ms-transform: translateX(300px);
-    transform: translateX(300px);
+    -webkit-transform: translateX(700px);
+    -moz-transform: translateX(700px);
+    -o-transform: translateX(700px);
+    -ms-transform: translateX(700px);
+    transform: translateX(700px);
 }
 .view-fancy:hover p {
     -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=100)";
